[package]
name = "nostd"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# no-std-compat = { version = "0.4.1", features = [ "alloc" ] }
# rlibc = "1.0.0"



[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
codegen-units = 1
