[package]
name = "nostd"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
no-std-compat = { version = "0.4.1", features = [ "alloc" ] }
# rlibc = "1.0.0"


#libc = { version = "0.2.14", default-features = false }

libc-print = "0.1.19"

#libc = "0.2"
libc_alloc = "1.0.3"


[profile.dev]
panic = "abort"


[profile.release]
panic = "abort"
debug=true
codegen-units = 256
lto=true

