[package]
name = "rust-no-std-console"
version = "0.1.0"
edition = "2018"
authors = ["@EnteroPositivo [GMail, Twitter, GitHub] )"]
readme = "README.md"


[dependencies]
no-std-compat = { version = "0.4.1", features = [ "alloc" ] }
libc-print = "0.1.19"
libc_alloc = "1.0.3"


[profile.dev]
panic = "abort"


[profile.release]
panic = "abort"
debug=true
codegen-units = 256
lto=true

